# traveltide-engine

./: .gitignore  README.md  main.py  makefile  pyproject.toml  requirements.txt
data/: README.md
data/gold/: user_segments.parquet
data/silver/: flights.parquet  hotels.parquet  sessions.parquet  users.parquet
src/traveltide/: etl.py  features.py  model.py  plots.py
tests/: test_features.py
