[tool.poetry]
name = "traveltide-engine"
version = "0.1.0"
description = "Production-grade customer segmentation pipeline for TravelTide"
authors = ["Dein Name <dein.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
typer = "^0.9.0"  # Für das CLI
pandera = "^0.18.0" # Für Datenvalidierung

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.1.0"
ipykernel = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88